--- a/index.html
+++ b/index.html
@@ -14,7 +14,19 @@
 
 <!-- Voit käyttää JSX:ää missä tahansa <script>-tagissa lisäämällä type="text/babel". -->
 <script type="text/babel">
-  // Lisää React-koodi tähän
+  // Tee react-komponentti "App"
+  class App extends React.Component {
+    render() {
+      return (
+        <div>
+          <h1>Hello world!</h1>
+          <p>Kaksi karamellia lasketaan kai yhdeksi, jos ne ovat tarttuneet toisiinsa?</p>
+        </div>
+      )
+    }
+  }
+  // Etsi elementti jonka id on "root" ja näytä App-komponentti sen sisällä
+  ReactDOM.render(<App />, document.getElementById('root'))
 </script>
 
 </body>
